Bug 1147193. Go back to having our accessors on JSStackFrame infallible.  r=bholley